# delego

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
delego/: __init__.py  _locking.py  approval.py  audit.py  brokers.py  cli.py  client.py  config.py  daemon.py  engine.py  mcp_server.py  models.py  policy.py  token.py  util.py
examples/: demo.py
tests/: conftest.py  test_broker.py  test_cli.py  test_concurrency.py  test_daemon.py  test_guards.py  test_mcp_server.py  test_scenarios.py  test_security_fixes.py  test_token.py
