[project]
name = "delego"
version = "0.3.4"
description = "Intent-bound action authorization for AI agents — authorise before a credential is used, require human approval for sensitive actions, and prove every action traces back to the instruction that authorised it."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Koishore Roy", email = "koishore@gmail.com" }]
keywords = ["ai-agents", "authorization", "mcp", "security", "audit", "confused-deputy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core stays light and auditable (this is a security tool). The MCP server is an
# optional extra — `pip install "delego[mcp]"` — so library/CLI users don't pull
# in `mcp` and its dependency tree (which can conflict with a system PyJWT).
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "click>=8.1",
]

[project.urls]
Homepage = "https://delegohq.com"
Documentation = "https://delegohq.com/docs"
Repository = "https://github.com/Delego-Dev/delego"
Issues = "https://github.com/Delego-Dev/delego/issues"
Changelog = "https://delegohq.com/changelog"

[project.scripts]
delego = "delego.cli:cli"
delego-mcp = "delego.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
# dev includes the mcp extra so the test suite exercises the MCP facade
# (tests/test_mcp_server.py skips gracefully where mcp is absent).
dev = ["pytest>=8.0", "mcp>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delego"]

[tool.hatch.build.targets.wheel.force-include]
"policy.example.yaml" = "policy.example.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
